# mnemos

./: .env.example  .gitlab-ci.yml  ANTI_MEMORY_POISONING.md  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENT_IMPORT_GUIDE.md  Dockerfile  Dockerfile.full  EVOLUTION.md  KNOWN_LIMITATIONS.md  MANIFEST.in  Makefile  QUICK_START_REQUIREMENTS.md  README.md  REQUIREMENTS_COMPARISON.md  ROADMAP.md  SECURITY.md  SKILL.md  SYSTEM_REQUIREMENTS.md  _version.py  compose.yml  config.py  config.toml.example  deploy.sh  distillation_worker.py  docker-compose.staging.yml  docker-compose.yml  install.py  install.sh  mcp_http_server.py  mcp_server.py  mnemos.service  mnemos.spec  pyproject.toml  requirements.txt  test_api_inference.sh  verify_v3_deployment.sh
.github/workflows/: pr-check.yml  release.yml
api/: auth.py  federation.py  lifecycle.py  mcp_tools.py  models.py  observability.py  security.py  visibility.py  webhook_dispatcher.py
api/handlers/: consultations.py  dag.py  document_import.py  entities.py  federation.py  health.py  ingest.py  journal.py  kg.py  memories.py  narrate.py  openai_compat.py  portability.py  sessions.py  state.py  versions.py  webhooks.py
benchmarks/: README.md
compression/: __init__.py  artemis.py  base.py  contest.py  contest_store.py  gpu_guard.py  judge.py  worker_contest.py
compression/apollo_schemas/: portfolio.py
db/: 0_init_roles_staging.sql  migrations.sql  migrations_charon_trigger_guard.sql  migrations_model_registry.sql  migrations_v3_2_entities_namespace.sql  migrations_v3_4_federation_compat.sql  migrations_v3_5_entities_namespace_unique.sql  migrations_v3_5_rls_group_select_unix_bits.sql  migrations_v3_5_session_compression_legacy_drop.sql  migrations_v3_5_session_compression_ratio_drop.sql  migrations_v3_5_sessions_consultations_namespace.sql  migrations_v3_5_state_journal_namespace.sql  migrations_v3_5_trigger_same_memory_parent.sql  migrations_v3_5_webhook_attempt_lease.sql  migrations_v3_5_webhook_attempt_unique.sql  migrations_v3_5_webhook_retry_terminal_state.sql  migrations_v3_5_webhook_status_updated_at.sql  migrations_v3_5_webhook_succeeded_terminal_trigger.sql  migrations_v3_5_webhook_succeeded_unique.sql  migrations_v3_5_webhook_superseded_marker.sql  migrations_v3_5_webhook_writer_revision.sql  migrations_v4_2_compression_candidates_nullable_tokens.sql  migrations_v4_2_compression_dag.sql  migrations_v4_2_deletion_requests.sql  migrations_v4_2_deletion_requests_blank_namespace_cleanup.sql  migrations_v4_2_deletion_requests_soft_delete_columns.sql  migrations_v4_2_deletion_requests_sweep_verifying.sql  migrations_v4_2_document_import_chunk_idempotency.sql  migrations_v4_2_morpheus_consolidate.sql  migrations_v4_2_morpheus_extract.sql  migrations_v4_2_pantheon_routing_audit.sql  migrations_v4_2_persephone.sql  migrations_v4_2_state_value_text.sql  migrations_v4_2_users_username.sql  migrations_v5_0_2_artemis_dedup.sql  migrations_v5_0_3_timestamp_tz_upgrade.sql  migrations_v5_0_consolidated_at.sql  migrations_v5_0_morpheus_extract_run_memories.sql  migrations_v5_1_0_deletion_log.sql  migrations_v5_2_0_nats_outbox_idempotency.sql  (+4 more)
db/migrations_sqlite/: migrations.sql  migrations_charon_trigger_guard.sql  migrations_model_registry.sql  migrations_v1_multiuser.sql  migrations_v2_sessions.sql  migrations_v2_versioning.sql  migrations_v3_1_2_audit_log_columns.sql  migrations_v3_1_2_kg_tenancy.sql  migrations_v3_1_compression.sql  migrations_v3_1_versioning_fix.sql  migrations_v3_2_2_version_snapshot_new_values.sql  migrations_v3_2_entities_namespace.sql  migrations_v3_2_user_namespace.sql  migrations_v3_3_morpheus.sql  migrations_v3_3_morpheus_namespace.sql  migrations_v3_3_recall_tracking.sql  migrations_v3_4_federation_compat.sql  migrations_v3_5_entities_namespace_unique.sql  migrations_v3_5_rls_group_select_unix_bits.sql  migrations_v3_5_session_compression_legacy_drop.sql  migrations_v3_dag.sql  (+29 more)
docs/: COMPRESSION.md  CORPUS-REVIEW-2026-04-29.md  CORPUS-REVIEW-V4.2-NATS.md  DREAM_STATE_DESIGN.md  GRAEAE_FEATURES.md  HA_AUTOMATION.md  INSTALL.md  KNOSSOS.md  KRONOS.md  MEMORY_ARCHITECTURE.md  MEMORY_EXPORT_FORMAT.md  NATS_OPERATIONS.md  NATS_SUBSTRATE.md  OBSERVABILITY.md  OPERATIONS.md  PANTHEON.md  RELEASE_CHECKLIST.md  RESTORE-DRILL.md  RFC-002-REENGAGEMENT.md  SCALING.md  SEARCH_LATENCY_NOTES.md  SINGLE_BINARY.md  SPECIFICATION.md  SQLITE_PROFILE.md  STREAMING_REPLICATION.md  SYSTEM_REQUIREMENTS.md  V3_5_CHARTER.md  V3_6_CHARTER.md  V4_PLAN.md  mpf_v0.1.json
graeae/: engine.py  provider_sync.py
installer/: __main__.py  agent.py  db.py  service.py  wizard.py
integrations/: README.md
mnemos/: _version.py
ops/: bridge-tier2-nightly.sh
scripts/: benchmark_compression_corpus.py  build-binary.sh  live_apollo_judge_smoke.py  mnemos_tunnel_setup.py  refresh_elo_weights.py  sync_provider_models.py  update_model_registry.py
systemd/: graeae-model-sync.service
tests/: __init__.py  _fake_backend.py  conftest.py  test_admin_compression_enqueue.py  test_admin_deletion_requests.py  test_admin_federation_role.py  test_admin_user_namespace.py  test_apollo_adversarial.py  test_apollo_code.py  test_apollo_commit.py  test_apollo_decision.py  test_apollo_engine.py  test_apollo_event.py  test_apollo_fallback.py  test_apollo_person.py  test_apollo_portfolio.py  test_artemis_dedup.py  test_artemis_engine.py  test_audit_high_fixes.py  test_audit_token_startup_warning.py  test_auth_failclosed.py  test_auth_query_consolidation.py  test_binary_build.py  test_branch_visibility.py  test_bulk_create_max_length.py  test_bulk_webhook_parity.py  test_charon_roundtrip.py  test_charon_v02_roundtrip.py  test_cli_dump_openapi.py  test_cli_surface.py  test_cli_typer_click_compat.py  test_compression_base.py  test_compression_dag_wiring.py  test_compression_hot_paths.py  test_compression_manifests_endpoint.py  test_connector_doc_configs.py  test_connector_smoke.py  test_consultation_audit_scoping.py  test_consultations_namespace_isolation.py  test_content_negotiation.py  (+158 more)
tools/: memory_export.py  memory_import.py
(+256 files in other folders)
