[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemos-os"
version = "4.2.0a13"
description = "MNEMOS-OS v4: multi-backend memory operating system with GRAEAE reasoning, profiles, single-binary edge deploys, and multi-worker support"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "MNEMOS Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "starlette>=0.40.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.0.0",
  "python-multipart>=0.0.9",
  "asyncpg>=0.29.0",
  # NB: psycopg/psycopg2 are deliberately NOT default deps. Both are
  # LGPL-3.0; we keep mnemos's runtime closure on permissive licenses
  # (Apache/MIT/BSD/MPL). The installer's API-key path uses asyncpg
  # if it's a real Postgres + falls back to invoking the operator's
  # psql binary via subprocess (which is the operator's external GPL
  # tool, not bundled with mnemos). Operators who want the psycopg-
  # based installer path can `pip install psycopg[binary]` separately.
  "httpx>=0.27.0",
  "slowapi>=0.1.9",
  "limits>=3.6.0",
  "redis>=5.0.0",
  "python-dotenv>=1.0.0",
  "mcp>=1.0.0",
  "numpy>=1.26.0",
  # psutil dropped 2026-05-01: zero import sites in mnemos/ source
  # (was a leftover from an earlier health-check experiment).
  "authlib>=1.3.0",
  "itsdangerous>=2.2.0",
  "prometheus_client>=0.20.0",
  "typer>=0.9.0",
  "nats-py>=2.14.0",
]

[project.urls]
Homepage = "https://github.com/mnemos-os/mnemos"
Repository = "https://github.com/mnemos-os/mnemos"
Documentation = "https://github.com/mnemos-os/mnemos/blob/master/README.md"

[project.optional-dependencies]
build = ["pyinstaller>=6.0", "sqlite-vec"]
docling = ["docling>=2.5.0", "docling-core>=2.0.0", "pillow>=10.0.0"]
# OpenTelemetry tracing. Without this extra, `install_tracing()` is a
# no-op and the tracing middleware passes through unchanged. Install
# via `pip install mnemos-os[tracing]` to ship spans via OTLP/HTTP
# to your collector (Tempo, Honeycomb, Jaeger, etc.).
tracing = [
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]
# Structured JSON log rendering via structlog. Enables
# MNEMOS_STRUCTURED_LOGS=true at runtime to opt in. Without this
# extra, install_structured_logging() is a no-op.
structlog = [
  "structlog>=25.0.0",
]
sqlite = [
  "aiosqlite>=0.20.0",
  "sqlite-vec>=0.1.6",
]
# [ml] — recommended ML stack for default installs that want
# semantic-similarity quality scoring. fastembed uses ONNX runtime
# (~10-20 MB), supports the same MiniLM/Nomic embedding model
# family as sentence-transformers, and pulls NO torch / nvidia /
# transformers / safetensors weight. This is the prod mnemos
# blueprint at PYTHIA :5002.
ml = ["fastembed>=0.3.0"]
# [gpu] — GPU acceleration for the ML embedding path. Default
# is fastembed-gpu (ONNX CUDA execution provider) which works
# with a system CUDA install but does NOT require the torch
# CUDA wheel chain. Operators on systems WITHOUT NVIDIA CUDA
# (Apple Silicon, Intel iGPU, Tegra, ARM) should NOT install
# this extra — install [ml] (CPU) or [phi] (Intel iGPU) instead.
gpu = ["fastembed-gpu>=0.3.0"]
# [phi] — Intel-iGPU-accelerated path: OpenVINO + FastEmbed, used
# in production at PYTHIA. Apache-2.0 across the board, no torch.
phi = ["openvino-genai>=2024.4.0", "fastembed>=0.3.0"]
# [full] — networkx for the ARTEMIS TextRank graph centrality
# fallback (imported in mnemos/domain/compression/artemis.py).
# spacy was historically declared here but has ZERO import sites in
# mnemos/ source — dropped 2026-05-01.
# sentence-transformers + its torch transitive was removed in
# v4.2.0a11; semantic-similarity is now in [ml] (fastembed).
# Operators wanting both: pip install 'mnemos-os[full,ml]'.
full = ["networkx>=3.3"]
dev = [
  "import-linter>=2.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
# Entry points that land in PATH after `pip install mnemos-os`. The installer
# can then be invoked as `mnemos-install` without needing install.py on the
# filesystem.
mnemos = "mnemos.cli.main:app"
mnemos-install = "mnemos.installer.__main__:main"

[tool.setuptools]
# Ship every file listed in MANIFEST.in (SQL migrations, config example,
# systemd unit) into the sdist.
include-package-data = true

[tool.setuptools.packages.find]
# Include the coherent v4 Python package tree. Top-level db/ remains a SQL
# migrations directory and is shipped via MANIFEST.in, not as a Python package.
include = [
  "mnemos*",
]

# uv: fast Python package installer for Docker builds
# Install with: curl -LsSf https://astral.sh/uv/install.sh | sh
# Note: uv does not support python-version in [tool.uv] (use pyproject.toml requires-python instead)
# For Docker: use `uv pip install --system -r requirements.txt` (--system is required when no venv exists)

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  "archive",
  "venv",
  ".venv",
  "dist",
  "build",
  "mnemos/tools/export_memories_for_docling.py",  # generated helper
]

[tool.ruff.lint]
# Default select is E+F+W; we add a tight ignore list for patterns that are
# intentional in this codebase.
ignore = [
  "E402",  # module-level import not at top — legit with sys.path.insert + conditional imports
  "E501",  # line-too-long — we set line-length above; trust that
  "F541",  # f-string without placeholders — cosmetic noise
]

[tool.ruff.lint.per-file-ignores]
# __init__.py files legitimately re-export symbols
"**/__init__.py" = ["F401"]
# Installer uses string forward references to lazily-imported Config
"mnemos/installer/__main__.py" = ["F821"]

[tool.importlinter]
root_package = "mnemos"
include_external_packages = false

[[tool.importlinter.contracts]]
name = "mnemos layered architecture"
type = "layers"
layers = [
  "mnemos.api",
  "mnemos.domain",
  "mnemos.persistence",
  "mnemos.db",
  "mnemos.core",
]

[[tool.importlinter.contracts]]
name = "api routes use domain, not db"
type = "forbidden"
source_modules = ["mnemos.api.routes"]
forbidden_modules = ["mnemos.db"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "domain modules are siblings"
type = "independence"
modules = [
  "mnemos.domain.compression",
  "mnemos.domain.graeae",
  "mnemos.domain.morpheus",
  "mnemos.domain.memory_categorization",
  "mnemos.domain.openai_compat",
  "mnemos.domain.portability",
]
ignore_imports = [
  # MORPHEUS intentionally invokes GRAEAE as its reasoning backend.
  "mnemos.domain.morpheus.runner -> mnemos.domain.graeae.engine",
  # The OpenAI-compatible gateway is an adapter over GRAEAE provider routing.
  "mnemos.domain.openai_compat.providers -> mnemos.domain.graeae.engine",
  # Streaming needs GRAEAE's ProviderStreamError to preserve provider error frames.
  "mnemos.domain.openai_compat.streaming -> mnemos.domain.graeae.engine",
]

[[tool.importlinter.contracts]]
name = "mcp does not call route handlers as functions"
type = "forbidden"
source_modules = ["mnemos.mcp"]
forbidden_modules = ["mnemos.api.routes"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "webhooks does not couple to domain"
type = "independence"
modules = ["mnemos.webhooks", "mnemos.domain"]

[[tool.importlinter.contracts]]
name = "persistence has no upward deps"
type = "forbidden"
source_modules = ["mnemos.persistence"]
forbidden_modules = [
  "mnemos.api",
  "mnemos.domain",
  "mnemos.mcp",
  "mnemos.webhooks",
  "mnemos.workers",
]

[[tool.importlinter.contracts]]
name = "core does not import api/domain/db/webhooks/mcp/etc"
type = "forbidden"
source_modules = ["mnemos.core"]
forbidden_modules = [
  "mnemos.api",
  "mnemos.domain",
  "mnemos.db",
  "mnemos.webhooks",
  "mnemos.mcp",
  "mnemos.workers",
  "mnemos.cli",
  "mnemos.tools",
  "mnemos.installer",
  "mnemos.hooks",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Note on tests/integration_nats/: those tests require a live NATS
# broker (MNEMOS_NATS_TEST_URL). They are NOT in addopts ignore
# here on purpose — pytest's --ignore short-circuits collection
# BEFORE conftest hooks run, so an explicit `pytest tests/
# integration_nats/` would silently collect zero tests if we
# kept the ignore. Instead, the conftest in that directory uses
# pytest_collection_modifyitems to mark every collected test as
# skipped when MNEMOS_NATS_TEST_URL is unset — default `pytest`
# stays green without skipping a directory by name.
addopts = "--ignore=tests/test_live_e2e.py"
markers = [
  "integration: integration tests requiring MNEMOS_TEST_DB (postgres://...)",
]
